src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>SentimentNegative__c</fullName>
        <label>Sentiment Negative</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SentimentNeutral__c</fullName>
        <label>Sentiment Neutral</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SentimentPositive__c</fullName>
        <label>Sentiment Positive</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
</CustomObject>